# llm-fingerprint

./: .gitignore  LICENSE  README.md  fingerprint.example.yaml  pyproject.toml
batteries/v1/: color-lexicon.json
docs/: adapters.md  cursor-devin.md  threat-model.md
refs/api-v1/: claude-3-5-sonnet.json  gemini-2.5-flash.json  gpt-4o.json  openai_gpt-4o-mini.json
src/fingerprint/: __init__.py  cli.py  collect.py  distance.py  normalize.py  report.py  store.py  types.py  verify.py
src/fingerprint/adapters/: __init__.py  base.py  cli_subprocess.py  mock.py  openai_compat.py
src/fingerprint/data/batteries/v1/: prompts.json
src/fingerprint/data/refs/api-v1/: google_gemini-2.5-flash.json
tests/: test_adapters.py  test_collect_verify.py  test_jsd.py  test_normalize.py
