[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-fingerprint"
version = "0.1.0"
description = "Toolkit to fingerprint and verify LLMs from single-token output distributions"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "LLM Fingerprint Team" }
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
fingerprint = "fingerprint.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fingerprint"]
